# lustereczko-mcp

./: .gitignore  AGENTS.md  README.md
docs/: cowork-setup.md
mcp/: pyproject.toml
mcp/src/main/: server.py  templates.py
mcp/src/main/tools/: apps.py  bidirectional_streaming.py  custom.py  graph.py  skills.py
mcp/src/test/: conftest.py  test_apps.py  test_bidirectional_streaming.py  test_custom.py  test_graph.py  test_server.py  test_skills.py
skills/: SKILL.md
skills/best-practices/: ui-agent-communication.md
skills/lustereczko-recipies/: SKILL.md
skills/lustereczko-recipies/recipes/: content-viewer.md  host-capabilities.md  ui-debug.md
skills/recipes/: bidirectional-events.md  custom-tools.md  ui-debug.md
