[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lustereczko"
version = "0.1.0"
description = "MCP app for agents to display HTML fragments to the user"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "grafeo>=0.5.42",
    "python-fasthtml>=0.12.50",
    "starlette<1.0.0",
]

[project.scripts]
lustereczko = "main.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/main"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
